--- a/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj
@@ -145,6 +145,9 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataPackage.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
