--- a/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj.filters
+++ b/HelloSocket/EasyTcpClient/EasyTcpClient.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Client.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="EasyTcpClient.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataPackage.h">
+    <ClInclude Include="MessageHeader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EasyTcpClient.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
