封装TCP网络通信服务端端EasyTcpServer

--- a/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -147,10 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EasyTcpServer.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataPackage.h" />
+    <ClInclude Include="EasyTcpServer.h" />
+    <ClInclude Include="MessageHeader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
