--- a/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="Server.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="EasyTcpServer.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataPackage.h">
+    <ClInclude Include="MessageHeader.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EasyTcpServer.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
