--- a/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/HelloSocket/EasyTcpServer/EasyTcpServer.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.h" />
     <ClInclude Include="ClientSocket.h" />
     <ClInclude Include="EasyTcpServer.h" />
     <ClInclude Include="MessageHeader.h" />
